# math

./: .gitignore  CMakeLists.txt  README.md  TODO.md  abs.h  algebra.h  algebra.test.cpp  constants.h  cpp20_array.h  cpp20_concepts.h  dependency_graph.sh  differentiate.h  eval.h  expression.h  hana.h  inverse.h  name.h  print_type.h  scalar.h  sorted.h  unit_test.h  vector.h
addition/: all.h  commutation.h  differentiate.h  operation.h  operation.test.cpp  power.h  power.test.cpp
algebra/: addition.h  basis.h  exponential.h  formatting.h  geometric.h  geometric.test.cpp  multiplication.h  reverse.h  test.cpp
composition/: operation.h  operation.test.cpp
geometry/: README.md  apply.h  composition.h  composition.test.cpp  direction.h  formatting.h  homothecy.h  point.h  point_transform.h  point_transform.test.cpp  rendering.test.cpp  rotation.h  rotation.md  rotation.test.cpp  scaling.h  scaling.test.cpp  slice.h  slice.test.cpp  transform.h  translation.h  translation.md  unit_test.h  vector_transform.h  vector_transform.test.cpp
geometry/algebra/: definition.h  definition.test.cpp  dot_product.h  dot_product.test.cpp  exponential.h  exponential.test.cpp  geometric_product.h  grade.h  grade.test.cpp  nabla.h  nabla.test.cpp  norm.h  norm.test.cpp  power.h  reference_frame.h  to_dense_tensor.h  to_dense_tensor.test.cpp  unit_test.h  wedge_product.h  wedge_product.test.cpp
geometry/export/: coordinates.h
geometry/export/x3d/: test.x3d.html
geometry/frame/: affine_map.h  affine_map.test.cpp  linear_map.h  linear_map.test.cpp  orientation.h  orientation.test.cpp  placement.h  placement.test.cpp  position.h  position.test.cpp  reference.h  unit_test.h
geometry/object/: direction.h  frame.h  frame.test.cpp  point.h  slice.h  slice.test.cpp
geometry/point_transform/: from_vector_transform.h  from_vector_transform.test.cpp  from_vector_transform.test.torus.x3d  translation.h  translation.md  unit_test.h
geometry/vector_transform/: composition.h  composition.test.cpp  perspective_projection.h  perspective_projection.test.cpp  projection.h  projection.test.cpp  rotation.h  rotation.md  rotation.test.cpp  scaling.h  scaling.test.cpp
group/: apply_operation.h  commutation.h  concept.h  element.h  element.test.cpp  generate.h  geometric.h  geometric.test.cpp  group.h  identity.h  inverse.h  minus.h  morphism.h  morphism.test.cpp  operation.h  operation.test.cpp  ordering.h  ordering.test.cpp  power.h  power.test.cpp  reverse.h  unit_test.h
multiplication/: all.h  commutator.h  commutator.test.cpp  differentiate.h  differentiate.test.cpp  operation.h  operation.test.cpp  power.h  power.test.cpp  reverse.h  reverse.test.cpp
symbolic/: constant.h  exponential.h  exponential.test.cpp  factorial.h  name.h  operation.h  operation.test.cpp  rational.h  rational.test.cpp  symbol.h  trigonometry.h  trigonometry.test.cpp  unit_test.h  vector.h
symbolic/operation/: all.h  mult.h  pow.h  template.h  trigonometry.h  trigonometry.test.cpp
vector/: addition.h  addition.test.cpp  basis.h  direction.h  formatting.h  scalar.h
